# air-defense-system-ros2

./: .gitignore  LICENSE  README.md  hss.repos  requirements.txt
doc/: HSS_Product_Requirements_Document.md  PROGRESS_REPORT.md  ROADMAP.md  ROS2_System_Architecture.md
docs/: Communication_Architecture.md  Product_Requirements_Document.md  ROADMAP.md
docs/architecture/: Communication_Architecture.md  Product_Requirements_Document.md  ProjectTree.md  ROADMAP.md
docs/nodes/: gimbal_controller_node.md  ground_station_gateway.md  micro_ros_agent.md  operation_manager_node.md  vision_processor_node.md
src/hss_bringup/: CMakeLists.txt  package.xml  setup.py
src/hss_bringup/docs/: README.md
src/hss_bringup/launch/: hss_system.launch.py
src/hss_firmware/: platformio.ini
src/hss_firmware/docs/: README.md
src/hss_firmware/src/: gimbal_controller.cpp  gimbal_controller.h  hardware_interface.cpp  main.cpp  micro_ros_utils.cpp  micro_ros_utils.h  sensor_reader.cpp  sensor_reader.h
src/hss_gimbal_control/: CMakeLists.txt  package.xml  setup.py
src/hss_gimbal_control/docs/: README.md
src/hss_gimbal_control/hss_gimbal_control/: gimbal_control_node.py
src/hss_gui/: CMakeLists.txt  package.xml  setup.py
src/hss_gui/docs/: README.md
src/hss_gui/hss_gui/: ground_station_node.py
src/hss_gui/hss_gui/www/: index.html
src/hss_interfaces/: CMakeLists.txt  package.xml
src/hss_interfaces/docs/: README.md
src/hss_interfaces/msg/: GimbalFeedback.msg  Target.msg  TargetArray.msg
src/hss_interfaces/srv/: FireCommand.srv  SetMode.srv
src/hss_op_manager/: CMakeLists.txt  package.xml  setup.py
src/hss_op_manager/docs/: README.md
src/hss_op_manager/hss_op_manager/: operation_manager_node.py
src/hss_vision/: setup.py
(+2 files in other folders)
