<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hss_bringup</name>
  <version>0.0.0</version>
  <description>Launch files and configurations for the HSS system</description>
  <maintainer email="tayfurcnr@gmail.com">user</maintainer>
  <license>TODO: License declaration</license>

  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>hss_gimbal_control</depend>
  <depend>hss_vision</depend>
  <depend>hss_op_manager</depend>
  <depend>hss_gui</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
